feat: 정렬 방식 변경